// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createPollPdfSpecifics > should generate a poll specifics content if there is a group and someone is represented 1`] = `
[
  {
    "color": "#444",
    "style": "tableExample",
    "table": {
      "body": [
        [
          [
            {
              "decoration": "underline",
              "margin": [
                0,
                2,
              ],
              "text": "Specifics",
            },
            {
              "style": "list",
              "ul": [
                {
                  "alignment": "left",
                  "text": [
                    "Absent: Name of user-bob (Red Party)",
                    {
                      "font": "ZapfDingbats",
                      "text": " ➔ ",
                    },
                    "Represented by: Name of user-backup-1 (Red Party)",
                  ],
                },
                {
                  "alignment": "left",
                  "text": [
                    "Absent: Name of user-dameon (Blue Party)",
                    {
                      "font": "ZapfDingbats",
                      "text": " ➔ ",
                    },
                    "Represented by: Name of user-backup-2 (Blue Party)",
                  ],
                },
              ],
            },
          ],
        ],
      ],
      "widths": [
        "100%",
      ],
    },
  },
]
`;

exports[`createPollPdfSpecifics > should generate a poll specifics content if there is a group with absent delegate without representing 1`] = `
[
  {
    "color": "#444",
    "style": "tableExample",
    "table": {
      "body": [
        [
          [
            {
              "decoration": "underline",
              "margin": [
                0,
                2,
              ],
              "text": "Specifics",
            },
            {
              "style": "list",
              "ul": [
                {
                  "alignment": "left",
                  "text": [
                    "Absent: Name of user-bob (Red Party)",
                  ],
                },
              ],
            },
          ],
        ],
      ],
      "widths": [
        "100%",
      ],
    },
  },
]
`;

exports[`createPollPdfSpecifics > should generate a poll specifics content if there is a group, someone is representing someone else and someone is not represented 1`] = `
[
  {
    "color": "#444",
    "style": "tableExample",
    "table": {
      "body": [
        [
          [
            {
              "decoration": "underline",
              "margin": [
                0,
                2,
              ],
              "text": "Specifics",
            },
            {
              "style": "list",
              "ul": [
                {
                  "alignment": "left",
                  "text": [
                    "Absent: Name of user-bob (Red Party)",
                    {
                      "font": "ZapfDingbats",
                      "text": " ➔ ",
                    },
                    "Represented by: Name of user-backup-1 (Red Party)",
                  ],
                },
                {
                  "alignment": "left",
                  "text": [
                    "Absent: Name of user-charlie (Red Party)",
                  ],
                },
                {
                  "alignment": "left",
                  "text": [
                    "Absent: Name of user-dameon (Blue Party)",
                    {
                      "font": "ZapfDingbats",
                      "text": " ➔ ",
                    },
                    "Represented by: Name of user-backup-2 (Blue Party)",
                  ],
                },
              ],
            },
          ],
        ],
      ],
      "widths": [
        "100%",
      ],
    },
  },
]
`;

exports[`createPollPdfSpecifics > should not generate a poll specifics content if there is no group 1`] = `[]`;
